# weather-report

./: README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  weather.db
backend/alembic/: env.py
backend/alembic/versions/: 9404820f34b0_create_initial_tables.py  c0f3019091f5_add_user_id_instead_of_ip_address_in_.py
backend/src/: main.py
backend/src/domain/: models.py
backend/src/external_resources/: autocomplete.py  weather.py
backend/src/ports/: dtos.py
backend/src/ports/routes/: router.py
backend/src/repositories/: database.py
backend/tests/: test_weather.py  weather.db
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/searchBar/: SearchBar.tsx
frontend/src/components/weatherCard/: WeatherCard.tsx
frontend/src/components/weatherForecastChart/: WeatherForecastChart.tsx
