[project]
name = "weather-report"
version = "0.0.1"
description = ""
authors = [
    {name = "Vladimir"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "aiosqlite",
    "httpx",
    "openmeteo-requests",
    "pandas",
    "numpy",
    "pytest",
]

[tool.uv]
  native-tls = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["**"]
exclude = [".venv"]

[tool.hatch.build.targets.sdist]
include = ["**"]
exclude = [".venv"]